# banka_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Banka.hpp  Bankomat.hpp  Oseba.hpp
src/: Banka.cpp  Bankomat.cpp  Oseba.cpp
tests/: CMakeLists.txt  code_coverage.sh  test_banka.cpp  test_main.cpp  test_oseba.cpp
